crates/hird-parse/tests/snapshots/smoke__record_type_keyword_field_name.snap
---
source: crates/hird-parse/tests/smoke.rs
expression: "render_cst(\"fn take(r: { tool: String }) -> Int = 1\")"
---
SOURCE_FILE
  FN_DECL
    FN_KW "fn"
    WHITESPACE " "
    IDENT "take"
    L_PAREN "("
    PARAM_LIST
      PARAM
        IDENT "r"
        COLON ":"
        RECORD_TYPE
          WHITESPACE " "
          L_BRACE "{"
          RECORD_TYPE_FIELD
            WHITESPACE " "
            TOOL_KW "tool"
            COLON ":"
            WHITESPACE " "
            IDENT "String"
          WHITESPACE " "
          R_BRACE "}"
    R_PAREN ")"
    RETURN_TYPE
      WHITESPACE " "
      ARROW "->"
      WHITESPACE " "
      IDENT "Int"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    INT "1"
