crates/hird-parse/tests/snapshots/smoke__record_update_base_only.snap
---
source: crates/hird-parse/tests/smoke.rs
expression: "render_cst(\"fn f() = { ..st.inner }\")"
---
SOURCE_FILE
  FN_DECL
    FN_KW "fn"
    WHITESPACE " "
    IDENT "f"
    L_PAREN "("
    R_PAREN ")"
    WHITESPACE " "
    EQ "="
    RECORD_LIT
      WHITESPACE " "
      L_BRACE "{"
      WHITESPACE " "
      DOT_DOT ".."
      FIELD_EXPR
        IDENT "st"
        DOT "."
        IDENT "inner"
      WHITESPACE " "
      R_BRACE "}"
