crates/hird-parse/tests/snapshots/smoke__recover_malformed_type_annotation.snap
---
source: crates/hird-parse/tests/smoke.rs
expression: "render_cst(\"fn f(x: 1) = x\")"
---
SOURCE_FILE
  FN_DECL
    FN_KW "fn"
    WHITESPACE " "
    IDENT "f"
    L_PAREN "("
    PARAM_LIST
      PARAM
        IDENT "x"
        COLON ":"
        ERROR
          WHITESPACE " "
          INT "1"
    R_PAREN ")"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    IDENT "x"
---
P0003 8..9: expected type
